--- a/pages/audio_detail/audio_detail.wxss
+++ b/pages/audio_detail/audio_detail.wxss
@@ -590,7 +590,7 @@
 
 
 /* 按钮 */
-
+/* 
 .share-btn {
     width: 100rpx;
     height: 100rpx;
@@ -601,9 +601,9 @@
     background: #fff;
     color: #B7B7B7;
     position: relative;
-}
+} */
 
-.share-btn>button {
+.large-btn>button {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -661,6 +661,8 @@
 .large-btn {
     margin: 10rpx 20rpx;
     border-radius: 50rpx;
+    position: relative;
+    /* visibility: visible; */
 }
 
 .modal-mask {
