--- a/pages/daily_task/daily_task.wxml
+++ b/pages/daily_task/daily_task.wxml
@@ -1,7 +1,8 @@
-<!--pages/daily_task/daily_task.wxml-->
-<view class='container' style='height: {{windowHeight}}px'>
+<!-- pages/daily_task/daily_task.wxml -->
+<!-- height: {{windowHeight}}px -->
+<view class='container' style=''>
   <!-- header -->
-  <view class='user-infos'>
+  <!-- <view class='user-infos'>
     <button class="openbtn" wx:if='{{authLevel != 2}}' open-type="getUserInfo" bindgetuserinfo="onGotUserInfo"></button>
     <image class='header_img' src='{{userInfo && userInfo.avatarUrl? userInfo.avatarUrl:"/images/nologinuser.png"}}'></image>
     <view class='infos-detail'>
@@ -11,57 +12,88 @@
         <text class='infos-desc'>已有<text class="num">{{gold}}</text>张书签</text>
       </view>
     </view>
-  </view>
-  <!-- tasklist -->
-  <view class='task-lists'>
-    <view class='list-item'>
-      <view class='item-infos'>
-        <text>签到 <text class="task-num">+{{signedDays[signedDays.length-1].number || isSigned[0].number}}</text> 书签</text>
-        <text wx:if="{{!isSigned && authLevel == 2}}">完成 (1/1)</text>
-        <text wx:else>完成 (0/1)</text>
+  </view> -->
+  <!-- headbcg -->
+  <view class="head-bcg"></view>
+  <view class="head-wrap">
+    <view class="card-wrap sign-wrap">
+      <view class="row between">
+        <text class="a">我的书签: {{gold}}书签</text>
+        <text class="right-cart" style="color: #3772FB" bindtap="toShopMall">去兑换></text>
       </view>
-      <view class='btn-wrap'>
-        <view class='xs-btn btn disabled' wx:if="{{!isSigned && authLevel == 2}}">已签到</view>
-        <view class='xs-btn btn blue-color' wx:else bindtap="showSignModal">去完成</view>
+      <view class="sign-list">
+        <view class="sign-item" wx:for="{{signInfo}}">
+          <view class="img-wrap">
+            <image class="img {{item.issign == 1?'active':''}}" src="{{item.issign == 1?'../../images/gou.png':''}}"></image>
+            <text class="img-text">{{item.issign == 1?'':item.number}}</text>
+          </view>
+          <text class="sign-text">{{index+1}}天</text>
+        </view>
+      </view>
+      <text class="sign-tip">已经连续签到{{signDays}}天，明天签到奖励翻倍</text>
+      <view class="btn-container" style="position: relative">
+        <button class="openbtn" wx:if='{{authLevel != 2}}' data-id="{{book.id}}" open-type="getUserInfo" bindgetuserinfo="onGotUserInfo"></button>
+        <view class="btn active sign-btn" wx:if="{{isSigned}}" bindtap="signIn">
+          签到领{{isSigned[0].number}}书签
+        </view>
+        <view class="btn disabled sign-btn" wx:else>已签到</view>
       </view>
     </view>
-    <!-- 奖励规则 -->
-    <block wx:for="{{rewardList}}" wx:for-index="index" wx:key="index">
-      <view class='list-item'>
-        <view class='item-infos'>
-          <text>{{item[1]}}<text class="task-num">+{{item[2] * item[4]}}</text>书签</text>
-          <!-- <text wx:if="{{item[8]}}">{{item[1]}}<text class="task-num">+{{item[8]}}</text>书签</text> -->
-          <!-- <text wx:if="{{item[9]}}">{{item[2]}}<text class="task-num">+{{item[9]}}</text>元红包</text> -->
-          <text>完成 ({{item[5]}}/{{item[4]}})</text>
-        </view>
-        <view class='btn-wrap'>
-          <view class='xs-btn btn disabled' wx:if="{{item[5] >= item[4]}}">已完成</view>
-          <view class='xs-btn btn blue-color' wx:else bindtap='toIndex'>去完成</view>
-        </view>
-      </view>
-    </block>
-    <!-- 每日任务邀请好友 -->
-    <block wx:for="{{tasklistObj.Invitation}}" wx:for-index="index" wx:key="index">
-      <view class='list-item'>
-        <view class='item-infos'>
-          <text wx:if="{{item[8]}}">{{item[2]}}<text class="task-num">+{{item[8]}}</text>书签</text>
-          <text wx:if="{{item[9]}}">{{item[2]}}<text class="task-num">+{{item[9]}}</text>元红包</text>
-          <text>完成 ({{item[4]}}/{{item[3]}})</text>
-        </view>
-        <view class='btn-wrap'>
-          <view class='xs-btn btn disabled' wx:if="{{item[10] == 1}}">已领取</view>
-          <view class='xs-btn btn blue-color' data-taskId="{{item[0]}}" data-award="{{item[8] || item[9]}}" wx:if="{{item[10] == 0 && item[4] >= item[3]}}" bindtap="onReceive">领取</view>
-          <view class='xs-btn btn blue-color' bindtap='showInviteList' wx:if="{{item[4] < item[3]}}">
-            去完成
-            <!-- <button open-type="share" class='share-btn'></button> -->
-          </view>
-        </view>
-      </view>
-    </block>
   </view>
-  <text class='tips'>所有任务于每日0点清空</text>
+  <view class="wrap" wx:if="{{onceTasks.length}}">
+    <view class="card-wrap">
+      <block wx:for="{{onceTasks}}" wx:key="index">
+        <view class="cell-wrap">
+          <view>
+            <text class="cell-title">每日听书5分钟</text>
+            <text class="cell-num">+4书签</text>
+          </view>
+          <view class="btn blue-color cell-btn">去书城</view>
+        </view>
+      </block>
+      <!-- <view class="cell-wrap">
+        <view>
+          <text class="cell-title">每日听书5分钟</text>
+          <text class="cell-num">+4书签</text>
+        </view>
+        <view class="btn blue-color cell-btn">去书城</view>
+      </view>
+      <view class="cell-wrap">
+        <view>
+          <text class="cell-title">每日听书5分钟</text>
+          <text class="cell-num">+4书签</text>
+        </view>
+        <view class="btn blue-color cell-btn">去书城</view>
+      </view> -->
+    </view>
+  </view>
+  <block wx:for="{{dailyTasks}}" wx:key="index">
+    <view class="wrap">
+      <view class="card-wrap">
+        <view class="cell-wrap">
+          <view>
+            <text class="cell-title">{{item[2]}}</text>
+            <text class="cell-num">+{{item[8]}}书签</text>
+          </view>
+          <view class="btn blue-color cell-btn" wx:if="{{item[1] == 1}}" bindtap="toRead">去阅读</view>
+          <view class="btn blue-color cell-btn" wx:if="{{item[1] == 3}}">邀请</view>
+          <view class="btn blue-color cell-btn" wx:if="{{item[1] == 5}}">去书城</view>
+        </view>
+      </view>
+    </view>
+  </block>
+  <!-- <view class="wrap">
+    <view class="card-wrap">
+      <view class="cell-wrap">
+        <view>
+          <text class="cell-title">每日听书5分钟</text>
+          <text class="cell-num">+4书签</text>
+        </view>
+        <view class="btn blue-color cell-btn">去书城</view>
+      </view>
+    </view>
+  </view> -->
 </view>
-
 <!-- 好友邀請文章列表 -->
 <view class="modal-mask" bindtap="hideInviteList" catchtouchmove="preventTouchMove" wx:if="{{isInviteList}}"></view>
 <view class='modal' catchtouchmove="preventTouchMove" wx:if="{{isInviteList}}">
@@ -81,15 +113,11 @@
       </block>
     </view>
   </scroll-view>
-  <view class='btn active w-vertical-align-l more-btn blue-color' bindtap='toIndex'>更多精彩文章</view>
+  <view class='btn active w-vertical-align-l more-btn blue-color' bindtap='toRead'>更多精彩文章</view>
 </view>
-
-
 <!-- 签到面板 -->
 <signinmodal modal-hidden="{{isSignedModal}}" bindsignIn="signIn" bindgetUserInfo="getUserInfofromCom" modal-msg="{{signInfo}}" sign-days="{{signDays}}" auth-level="{{authLevel}}" is-signed="{{isSigned}}" />
-
 <popup modal-hidden="{{tipsModal}}" modal-title="恭喜" award="{{signAward}}" modal-type="1" is-currentpage="true" bindtoView="toAwardView"></popup>
-
 <!-- 专属海报 -->
 <share-poster modal-hidden="{{isPosterModal}}"></share-poster>
 <!-- 分享面板 -->
