--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -69,6 +69,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20rpx;
 }
 
 .card-wrap .btn-container.free-card {
@@ -77,7 +78,7 @@
 
 .large-btn {
     /* width: 100%; */
-    margin: 0 42rpx;
+    /* margin: 0 42rpx; */
     height: 90rpx;
     line-height: 90rpx;
     text-align: center;
@@ -85,6 +86,7 @@
     border-radius: 50rpx;
     width: 460rpx;
     box-shadow: 0rpx 4rpx 14rpx 0rpx rgba(0, 0, 0, 0.3);
+    position: relative;
 }
 
 .card-body {
@@ -107,7 +109,7 @@
 }
 
 .link-wrap {
-    width: 50%;
+    width: 60%;
     margin: 20rpx auto;
 }
 
@@ -119,9 +121,12 @@
     text-align: center;
     vertical-align: center;
     height: 30rpx;
-    line-height: 10rpx;
+    line-height: 30rpx;
+    position: relative
 }
-
+.link-item.disabled {
+  color: #cecece
+}
 .link-item:first-child {
     border-right: 4rpx solid #39A7F7;
 }
@@ -190,7 +195,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 80rpx 0 20rpx 0rpx
+    padding: 40rpx 0 20rpx 0rpx
 }
 
 .card-infos .img {
@@ -210,6 +215,8 @@
 .card-infos .author {
     color: #A5A09F;
     margin: 10rpx 0;
+    font-size: 26rpx;
+    margin-bottom: 20rpx;
 }
 
 .card-infos .price {
@@ -219,13 +226,14 @@
 
 .card-infos .desc {
     width: 80%;
-    color: #A5A09F;
+    color: #000;
+    font-size: 26rpx;
     /* margin: 10rpx 0; */
     overflow: hidden;
     display: -webkit-box;
     white-space: initial;
     text-overflow: ellipsis;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 
