--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -3,10 +3,11 @@
   <view class='user-infos-wrap'>
     <view class='user-infos'>
       <button class="openbtn" wx:if='{{authLevel != 2}}' open-type="getUserInfo" bindgetuserinfo="onGotUserInfo"></button>
+      <image class="img-bcg" src="../../images/my-bcg.png"></image>
       <view class='header_img_wrap' >
         <image class="img" src='{{userInfo && userInfo.avatarUrl? userInfo.avatarUrl:"/images/nologinuser.png"}}'></image>
         <!-- wx:if="{{isVip}}" -->
-        <view class="vip" wx:if="{{isVip}}">VIP</view>
+        <view class="vip" wx:if="{{isVip}}"><image class="img" src="/images/vip.png"></image></view>
       </view>
       <text class='user-name'>{{userInfo.nickName? userInfo.nickName:"点击头像立即登录" }}</text>
       <!-- <view class='row center'>
@@ -36,8 +37,8 @@
   <view class="card-wrap">
     <view class="media-wrap" slot="body" hover-class="none" hover-stop-propagation="false">
       <wux-media thumb="https://soure.chudianad.com/static/welfare/product/thumbImg/201811161207227287.jpg" thumb-style="" title="汗牛书屋7天畅听卡" label="全场书籍免费无限听">
-        <view class="time" wx:if="{{isVip}}">
-          {{Vip.endTime}} 到期 
+        <view class="time" >
+          {{VipEndTime?VipEndTime+'  到期':'已过期'}}
         </view>
         <view class="btn-wrap center-right" data-appid="{{item.appid}}" data-path="{{item.path}}" slot>
           <view class="btn blue-color disabled" wx:if="{{isVip}}">已领取</view>
@@ -49,7 +50,7 @@
   <view class="menu-wrap">
     <view class="menu">
       <view class='menu-item' bindtap='toDailyTask'>
-        <image class="img" src='/images/star-border-icon.png'></image>
+        <image class="img" src='/images/task-icon.png'></image>
         <view class='menu-title'>今日任务</view>
         <view class='right'>
           <text class="a" style="color: #99B9FA;margin-right: 20rpx;">任务及书签流水</text>
